changed css class prefix nuweb to vuexp

--- a/src/themes/themes.scss
+++ b/src/themes/themes.scss
@@ -1,7 +1,7 @@
 @import 'colors';
 
 $themes: (
-  nuweb: (
+  vuexp: (
     primary: $water-blue,
     primary-light: $water-blue-light,
     primary-dark: $water-blue,
